--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,7 @@
 browser=chrome
+etsyUrl=https://www.etsy.com
+wikiUrl=https://www.wikipedia.org
+libraryUrl=https://library2.cybertekschool.com/login.html
+username=student30@library
+password=IaT9YI0I
+crmUrl=http://login2.nextbasecrm.com/
