blaze task completes

--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,4 @@ libraryUrl=https://library2.cybertekschool.com/login.html
 username=student30@library
 password=IaT9YI0I
 crmUrl=http://login2.nextbasecrm.com/
+blaze=https://demoblaze.com/
