ZeroBank almost done

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=chromeSSL
 etsyUrl=https://www.etsy.com
 wikiUrl=https://www.wikipedia.org
 libraryUrl=https://library2.cybertekschool.com/login.html
@@ -6,3 +6,4 @@ username=student30@library
 password=IaT9YI0I
 crmUrl=http://login2.nextbasecrm.com/
 blaze=https://demoblaze.com/
+zeroUrl=http://zero.webappsecurity.com/
